[tool.poetry]
name = "homefinder"
version = "0.1.0"
description = ""
authors = ["Nikita <vekshinnikita>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
